# zephyr

./: .clang-format  .clang-tidy  .clangd  .iwyu_mappings.json  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/: Dependencies.cmake
docs/: 00_overview.md  01_architecture.md  02_components.md  03_routing.md  04_protocols.md  05_internal_message.md  06_response_and_errors.md  07_test_strategy.md  10_mvp.md  ISSUES_MVP_v0.1.md  design_rationale.md  future_work.md  roadmap.md
examples/: CMakeLists.txt  example_01.cpp  example_01_basic.cpp  example_01_udp.cpp  example_strand_01.cpp  example_tcp_01.cpp  example_tcp_02.cpp  example_tcp_client.cpp  example_tcp_server.cpp  example_udp_client.cpp  example_udp_server.cpp
examples/tcp/: CMakeLists.txt  example_tcp_client.cpp  example_tcp_server.cpp
examples/udp/: CMakeLists.txt  example_udp_server.cpp
sandbox/: CMakeLists.txt
sandbox/source/: SandboxApplication.cpp
tests/ut/: CMakeLists.txt
tests/ut/network/: addressV4Tests.cpp  addressV6Tests.cpp  constexprTests.cpp  endpointTests.cpp
zephyr/: CMakeLists.txt  zephyr.cpp  zephyr.h
zephyr/core/: application.cppm  plugin.cppm
zephyr/include/core/: Application.hpp  Entrypoint.hpp
zephyr/include/plugins/tcpClient/: tcpClient.hpp
zephyr/include/plugins/tcpClient/details/: tcpClientControllerConcept.hpp  tcpConnector.hpp
zephyr/include/plugins/tcpServer/: tcpServer.hpp
zephyr/include/plugins/tcpServer/details/: tcpAcceptor.hpp  tcpConnection.hpp  tcpServer.hpp  tcpServerControllerConcept.hpp
zephyr/include/plugins/udpServer/: udpServer.hpp
zephyr/include/zephyr/: zephyr.hpp
zephyr/include/zephyr/00_common/: resultSender.hpp
zephyr/include/zephyr/00_context/: context.hpp
zephyr/include/zephyr/00_execution/: strandSender.hpp
zephyr/include/zephyr/00_http/: httpParser.hpp  httpRouter.hpp
zephyr/include/zephyr/00_http/middlewares/: loggingMiddleware.hpp
zephyr/include/zephyr/00_pipeline/: pipelineConcept.hpp
zephyr/include/zephyr/00_pipelines/: rawPipeline.hpp
zephyr/include/zephyr/00_tcp/: tcpServer.hpp
zephyr/include/zephyr/00_udp/: udpProtocol.hpp  udpRouter.hpp
zephyr/include/zephyr/common/: anySender.hpp
zephyr/include/zephyr/core/: application.hpp  entrypoint.hpp  logger.hpp  plugin.hpp  pluginConcept.hpp
zephyr/include/zephyr/core/details/: signalHandler.hpp
zephyr/include/zephyr/execution/: strandOp.hpp  strandScheduler.hpp  strandState.hpp
zephyr/include/zephyr/execution/details/: strandState.hpp
zephyr/include/zephyr/http/: httpMessages.hpp  httpPipeline.hpp  httpPipelineBuilder.hpp  httpPipelineWithMiddleware.hpp  httpRoute.hpp  httpRouter.hpp  httpSerializer.hpp
zephyr/include/zephyr/http/middlewares/: authMiddleware.hpp  httpMiddlewaresConcept.hpp
zephyr/include/zephyr/io/: ioUringContext.hpp  ioUringReadSender.hpp  ioUringWriteSender.hpp
zephyr/include/zephyr/network/: addressV4.hpp  addressV6.hpp  endpoint.hpp  socket.hpp  udpSocket.hpp
zephyr/include/zephyr/network/details/: protocolConcept.hpp
zephyr/include/zephyr/plugin/details/: pluginConcept.hpp
zephyr/include/zephyr/plugins/: dummyPlugin.hpp
zephyr/include/zephyr/plugins/udp/: concept.hpp  plugin.hpp
zephyr/include/zephyr/plugins/udp/details/: protocol.hpp
zephyr/include/zephyr/plugins/udpServer/: UdpServerPlugin.hpp  udpServer.hpp
zephyr/include/zephyr/plugins/udpServer/details/: concept.hpp
zephyr/include/zephyr/tcp/: session.hpp  tcpProtocol.hpp  tcpServer.hpp  tcpSession.hpp
zephyr/include/zephyr/udp/: udpPacket.hpp  udpProtocol.hpp  udpRouterPipeline.hpp  udpServer.hpp
zephyr/include/zephyr/utils/: anySender.hpp
zephyr/io/: ioUringAcceptSender.cppm  ioUringAcceptSender.hpp  ioUringContext.cpp  ioUringContext.cppm  ioUringContext.hpp
zephyr/plugins/: dummyPlugin.cpp
zephyr/source/00_http/: httpMessages.cpp  httpPipeline.cpp  httpRouter.cpp  httpSerializer.cpp
zephyr/source/00_io/: ioUringContext.cpp
zephyr/source/core/: Application.cpp  logger.cpp
zephyr/source/http/: httpParser.cpp  httpRoute.cpp  httpRouter.cpp
zephyr/source/io/: ioUringContext.cpp
zephyr/source/network/: addressV4.cpp  addressV6.cpp  endpoint.cpp  udpSocket.cpp
zephyr/source/plugins/tcpServer/details/: tcpAcceptor.cpp  tcpConnection.cpp  tcpServer.cpp
zephyr/source/zephyr/core/details/: signalHandler.cpp
zephyr/source/zephyr/network/: socket.cpp
